[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/ExpulsionEffect.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 48.3069

[node name="ExpulsionEffect" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_ExpulsionEffect_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
